[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/UserBox.gd" type="Script" id=1]
[ext_resource path="res://ui/other/is_offline.png" type="Texture" id=2]
[ext_resource path="res://ui/flags/russia.jpg" type="Texture" id=3]
[ext_resource path="res://ui/buttons/account.png" type="Texture" id=4]
[ext_resource path="res://scripts/ui/Widget.gd" type="Script" id=5]

[node name="PlayerBox" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 50.0
margin_bottom = -1002.0
rect_min_size = Vector2( 1900, 60 )
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1963.0
margin_bottom = 71.0
rect_min_size = Vector2( 0, 60 )
custom_constants/separation = 0

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_right = 1956.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )

[node name="Index" type="Label" parent="VBox/HBox"]
margin_top = 23.0
margin_right = 80.0
margin_bottom = 37.0
rect_min_size = Vector2( 80, 0 )
text = "#"
align = 1

[node name="VSeparator" type="VSeparator" parent="VBox/HBox"]
margin_left = 84.0
margin_right = 88.0
margin_bottom = 60.0

[node name="StatusOffset" type="ReferenceRect" parent="VBox/HBox"]
margin_left = 92.0
margin_right = 124.0
margin_bottom = 60.0
rect_min_size = Vector2( 32, 32 )

[node name="StatusRect" type="TextureRect" parent="VBox/HBox"]
visible = false
margin_left = 252.0
margin_right = 284.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="VSeparator2" type="VSeparator" parent="VBox/HBox"]
margin_left = 128.0
margin_right = 132.0
margin_bottom = 60.0

[node name="Name" type="Label" parent="VBox/HBox"]
margin_left = 136.0
margin_top = 23.0
margin_right = 436.0
margin_bottom = 37.0
rect_min_size = Vector2( 300, 0 )
text = "HEADER_PLAYER_NAME"
align = 1
valign = 1

[node name="VSeparator3" type="VSeparator" parent="VBox/HBox"]
margin_left = 440.0
margin_right = 444.0
margin_bottom = 60.0

[node name="Country" type="Label" parent="VBox/HBox"]
margin_left = 448.0
margin_top = 23.0
margin_right = 628.0
margin_bottom = 37.0
rect_min_size = Vector2( 180, 0 )
text = "HEADER_PLAYER_COUNTRY"
align = 1
valign = 1

[node name="CountryRect" type="TextureRect" parent="VBox/HBox"]
visible = false
margin_left = 622.0
margin_right = 622.0
rect_min_size = Vector2( 180, 32 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="VSeparator4" type="VSeparator" parent="VBox/HBox"]
margin_left = 632.0
margin_right = 636.0
margin_bottom = 60.0

[node name="Rank" type="Label" parent="VBox/HBox"]
margin_left = 640.0
margin_top = 23.0
margin_right = 940.0
margin_bottom = 37.0
rect_min_size = Vector2( 300, 0 )
text = "HEADER_PLAYER_RANK"
align = 1
valign = 1

[node name="VSeparator5" type="VSeparator" parent="VBox/HBox"]
margin_left = 944.0
margin_right = 948.0
margin_bottom = 60.0

[node name="Wins" type="Label" parent="VBox/HBox"]
margin_left = 952.0
margin_top = 23.0
margin_right = 1202.0
margin_bottom = 37.0
rect_min_size = Vector2( 250, 0 )
text = "HEADER_PLAYER_WINS"
align = 1
valign = 1

[node name="VSeparator6" type="VSeparator" parent="VBox/HBox"]
margin_left = 1206.0
margin_right = 1210.0
margin_bottom = 60.0

[node name="Losses" type="Label" parent="VBox/HBox"]
margin_left = 1214.0
margin_top = 23.0
margin_right = 1464.0
margin_bottom = 37.0
rect_min_size = Vector2( 250, 0 )
text = "HEADER_PLAYER_LOSSES"
align = 1
valign = 1

[node name="VSeparator7" type="VSeparator" parent="VBox/HBox"]
margin_left = 1468.0
margin_right = 1472.0
margin_bottom = 60.0

[node name="Draws" type="Label" parent="VBox/HBox"]
margin_left = 1476.0
margin_top = 23.0
margin_right = 1726.0
margin_bottom = 37.0
rect_min_size = Vector2( 250, 0 )
text = "HEADER_PLAYER_DRAWS"
align = 1
valign = 1

[node name="VSeparator8" type="VSeparator" parent="VBox/HBox"]
margin_left = 1730.0
margin_right = 1734.0
margin_bottom = 60.0

[node name="ShowAccount" type="TextureButton" parent="VBox/HBox"]
visible = false
margin_left = 1696.0
margin_right = 1728.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 4 )
expand = true
script = ExtResource( 5 )
unnamed = true

[node name="HSeparator" type="HSeparator" parent="VBox"]
margin_top = 60.0
margin_right = 1956.0
margin_bottom = 64.0

